--- a/GeoQuizL1/GeoQuizL1/app/src/main/res/layout/activity_quiz.xml
+++ b/GeoQuizL1/GeoQuizL1/app/src/main/res/layout/activity_quiz.xml
@@ -55,6 +55,12 @@ This means, in which direction it's contents should align.
         https://developer.android.com/guide/topics/resources/more-resources.html#Dimension
         for padding units
         -->
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:padding="24dp"
+        android:id="@+id/answered_text_view" />
+
 
     <LinearLayout
         android:orientation="horizontal"
@@ -121,6 +127,19 @@ This means, in which direction it's contents should align.
         android:src="@drawable/arrow_right" />
     //android:drawablePadding="6dp"/>
     //android:text="@string/next_button" />
+    </LinearLayout>
+
+    <LinearLayout
+        android:orientation="horizontal"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content">
+        <Button
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:id="@+id/button_cheat"
+            android:text="@string/cheat_button_label"
+            android:layout_weight="2"/>
+
     </LinearLayout>
 
 
