--- a/GeoQuizL1/GeoQuizL1/app/src/main/res/layout/activity_questionlist.xml
+++ b/GeoQuizL1/GeoQuizL1/app/src/main/res/layout/activity_questionlist.xml
@@ -1,19 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout
-    xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_height="wrap_content"
-    android:orientation="horizontal"
-    android:layout_width="wrap_content"
-    android:padding="15dp">
-
-    <android.support.v7.widget.RecyclerView android:id="@+id/my_recycler_view"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_gravity="center"/>
-
-    <TextView
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:id="@+id/questionList"
-        android:text=""/>
-</LinearLayout>
+<android.support.v7.widget.RecyclerView xmlns:android="http://schemas.android.com/apk/res/android"
+    android:id="@+id/my_recycler"
+    android:layout_width="match_parent"
+    android:layout_height="match_parent" />
