--- a/GeoQuizL1/GeoQuizL1/app/src/main/res/layout/quiz_pager.xml
+++ b/GeoQuizL1/GeoQuizL1/app/src/main/res/layout/quiz_pager.xml
@@ -1,8 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.v7.widget.RecyclerView
+<android.support.v4.view.ViewPager
     xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:scrollbars="vertical"
-    android:id="@+id/my_recycler_view"
-    />
+    android:id="@+id/view_pager">
+</android.support.v4.view.ViewPager>
