--- a/GeoQuizL1/GeoQuizL1/app/src/main/res/layout/activity_fragment.xml
+++ b/GeoQuizL1/GeoQuizL1/app/src/main/res/layout/activity_fragment.xml
@@ -1,16 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<!--
-xmlns stands for xml name space
-Each declare a different XML namespace (android, app, and tools, respectively)
-If your XML file has one or more attributes prefixed with android:,
-you need to declare the android namespace. Many XML files will have these,
-from framework-defined runtime attributes.
-.-->
 
-<!--
-android:gravity is the Inside gravity of that View.
-This means, in which direction it's contents should align.
--->
 <LinearLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
@@ -20,91 +9,51 @@ This means, in which direction it's contents should align.
     android:id="@+id/main_layout"
     android:weightSum="1">
 
+    <TextView
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:padding="3dp"
+        android:gravity="center"
+        android:id="@+id/api_level_text_view" />
 
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:padding="24dp"
-        android:id="@+id/question_text_view" />
-    <!--
-    see:
-    https://developer.android.com/guide/topics/resources/more-resources.html#Dimension
-    for padding units
-    -->
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:padding="24dp"
+        android:padding="6dp"
         android:id="@+id/answered_text_view" />
 
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:padding="24dp"
-        android:id="@+id/cheat_used_all_tokens" />
-
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:padding="24dp"
-        android:id="@+id/aplik_level_text_view" />
-
-
+        android:id="@+id/question_text_view" />
 
     <LinearLayout
         android:orientation="horizontal"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content">
 
-        <Button
+        <ImageButton
             android:text="@string/false_button"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:id="@+id/false_button"
+            android:src="@drawable/no"
             android:layout_weight="1" />
-        <Button
+        <ImageButton
             android:text="@string/true_button"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:id="@+id/true_button"
+            android:src="@drawable/yes"
             android:layout_weight="1" />
     </LinearLayout>
 
-
     <LinearLayout
         android:orientation="horizontal"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content">
 
-        <ImageButton
-            android:id="@+id/previous_button"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:src="@drawable/arrow_left"
-            android:paddingStart="24dp"
-            android:paddingEnd="24dp"
-            android:paddingTop="16dp"
-            android:paddingBottom="16dp"/>
-        //android:drawablePadding="6dp"/>
-        //android:text="@string/previous_button" />
-
-        <ImageButton
-            android:id="@+id/next_button"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:paddingBottom="16dp"
-            android:paddingEnd="24dp"
-            android:paddingStart="24dp"
-            android:paddingTop="16dp"
-            android:src="@drawable/arrow_right" />
-        //android:drawablePadding="6dp"/>
-        //android:text="@string/next_button" />
-    </LinearLayout>
-
-    <LinearLayout
-        android:orientation="horizontal"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content">
         <Button
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
@@ -119,8 +68,11 @@ This means, in which direction it's contents should align.
             android:text="SHOW QUESTIONS LIST" />
 
     </LinearLayout>
-
-
-
+    <TextView
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:padding="24dp"
+        android:gravity="center"
+        android:id="@+id/cheat_used_all_tokens" />
 
 </LinearLayout>
