--- a/GeoQuizL1/GeoQuizL1/app/src/main/res/layout/activity_questionlist.xml
+++ b/GeoQuizL1/GeoQuizL1/app/src/main/res/layout/activity_questionlist.xml
@@ -1,8 +1,16 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.v7.widget.RecyclerView
+<LinearLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
+    android:layout_height="wrap_content"
+    android:orientation="vertical"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:scrollbars="vertical"
-    android:id="@+id/my_recycler_view"
-    />
+    android:padding="10dp">
+
+    <android.support.v7.widget.RecyclerView
+        xmlns:android="http://schemas.android.com/apk/res/android"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:scrollbars="vertical"
+        android:id="@+id/my_recycler_view"/>
+
+</LinearLayout>
